--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ nav .links a:hover{
   background-color: #7733FF;
 }
 
-
 header{
   color: #ffffff;
   font-family: "Poppins";
@@ -97,6 +96,7 @@ header img {
   width: 350px;
 }
 
+/* section */
 section{
   display: flex;
   align-items: center;
@@ -198,6 +198,7 @@ main .btns #second{
   padding-right: 20px;
 }
 
+/* content images */
 main .content{
   display: flex;
   align-items: center;
@@ -212,36 +213,25 @@ main .images{
   gap: 5rem;
 }
 
-main .images .img-1{
-  box-shadow: -3px -2px 10px #88888888;
-  border-radius: 150px;
-}
 main .images .img-1 img{
-  width: 130px;
-  border-radius: 150px;
-}
-
-
-main .images .img-2{
-  box-shadow: -3px -2px 10px #88888888;
-  border-radius: 150px;
-
+width:210px;
+box-shadow: -3px -2px 10px #88888888;
+  border-radius: 200px;
 }
 main .images .img-2 img{
-  width: 130px;
-  border-radius: 50px;
-}
-
-main .images .img-3{
+  width:200px;
   box-shadow: -3px -2px 10px #88888888;
-  border-radius: 200px;
-  width: 90px;
+  border-radius: 150px;
+  height: 200px;
 }
 main .images .img-3 img{
-  width: 130px;
-  border-radius: 150px;
+  box-shadow: -3px -2px 10px #88888888;
+  border-radius: 200px;
+  width:210px;
 }
-
+main .box .img-4 img{
+  width: 420px;
+}
 main .box{
   border-radius: 7px;
   box-shadow: -3px -2px 10px #88888888;
@@ -249,6 +239,8 @@ main .box{
   display: flex;  
   flex-direction: column;
   gap: 1rem;
+  position: relative;
+  bottom: 90px;
 }
 
 main .box .text{
@@ -270,22 +262,9 @@ main .box .text #second{
   font-size: 15px;
   font-weight: 250;
   text-align: center;
-  display: block;
 }
 
-main .box .img-5 img{
-  display: flex;
-  justify-content: center;
-  width: 440px;
-}
-main .box .img-5{
-  position: relative;
-  top: 590px;
-}
-main .box .img-4 img{
-  width: 260px;
-}
-
+/* skill section */
 .skill{
   display: flex;
   flex-direction: column;
@@ -319,21 +298,34 @@ main .box .img-4 img{
   width: 290px;
 }
 
-
+.skill .ski .btns span{
+  color: #ffffff;
+  background-color: #7733FF;
+  box-shadow: -2px -2px 3px #88888888;
+  border-radius: 20px;
+  padding: 10px 45px;
+  font-family: "Poppins";
+  font-size: 15px;
+  width: 150px;
+  position: relative;
+  left: 23.5rem;
+  top: 3rem;
+}
 
 .skill .images{
   display: flex;
   align-items: center;
   gap: 15rem;
   padding-top: 6rem;
-  position: relative;
-  left: 240px;
 }
 
 .skill .images .img-1 img{
-  width: 940px;
+   position:relative;
+  bottom:227px;
+  left: 232px;
+  width:900px
+  
 }
-
 .skill .images .img-2 img{
   width: 300px;
   border-radius: 200px;
@@ -343,10 +335,12 @@ main .box .img-4 img{
   width: 40px;
 }
 
+/* certs */
 .certs{
   display: flex;
   flex-direction: column;
   margin-top: 120px;
+  
 }
 
 .certs .cert span{
@@ -396,13 +390,12 @@ main .box .img-4 img{
   height: 150px;
 }
 
+/* article */
 article{
   display: flex;
   flex-direction: column;
   margin-top: 120px;
   align-items: center;
-  position: relative;
-  top: 10px;
 }
 
 article .exp span{
@@ -418,6 +411,8 @@ article .exp span{
 article .exp .lines{
   display: flex;
   margin-top: 10px;
+  color: white;
+
 }
 
 article .exp .lines .first-line{
@@ -457,7 +452,6 @@ article .btns span:hover{
 article .btns #first{
   background-color: #7733FF;
 }
-
 article .texts{
   display: flex;
   align-items: center;
@@ -535,7 +529,7 @@ article .texts .text-2{
 article .texts::before {
   content: "";
   position: absolute;
-  top: 15rem;
+  top: 308rem;
   left: 50%;
   width: 3px;
   height: 700px;
@@ -544,8 +538,8 @@ article .texts::before {
 
 article .img-1 img{
   position: absolute;
-  top: 30rem;
-  left: 40.7rem;
+  top: 342rem;
+  right: 40.4rem;
   z-index: 1;
   border: 2px solid #2C2F38;
   border-radius: 50px;
@@ -555,8 +549,8 @@ article .img-1 img{
 }
 article .img-2 img{
   position: absolute;
-  top: 44.5rem;
-  left: 40.7rem;
+  top: 310.5rem;
+  right: 40.3rem;
   z-index: 1;
   border: 2px solid #2C2F38;
   border-radius: 50px;
@@ -655,5 +649,5 @@ footer address form .btn button{
   padding-left: 20px;
   padding-right: 20px;
   color: #ffffff;
- width:100px;
+  width: 100px;
 }
